# SafeExecutor

./: .gitignore  pom.xml
executor-lib/: CMakeLists.txt  pom.xml
executor-lib/src/main/c/ru/ivmiit/ejudge-executor/: compile.c  execute.c  ru_ivmiit_executor_SafeExecutor.c  safe-executor.c  xalloc.c
executor-lib/src/main/c/ru/ivmiit/ejudge-executor/ejudge/: archive_paths.h  avatar_plugin.h  bson_utils.h  c_value.h  clarlog.h  cldb_plugin.h  clntutil.h  common_mongo_plugin.h  common_plugin.h  compile_packet.h  compile_packet_priv.h  config.h  content_plugin.h  contest_plugin.h  contests.h  cr_serialize.h  dates_config.h  diff.h  dwarf_parse.h  ej_import_packet.h  ej_types.h  ej_uuid.h  ejudge_cfg.h  fileutl.h  filter_eval.h  filter_tree.h  flexstring.h  full_archive.h  hash_priv.h  html.h  http_request.h  integral.h  internal_pages.h  lang_config_vis.h  mischtml.h  ncheck_packet.h  new-server.h  new_server_clnt.h  new_server_pi.h  new_server_proto.h  (+41 more)
executor-lib/src/main/c/ru/ivmiit/ejudge-executor/ejudge-reuse/: fileutl.c  reuse_checkaccess.c  reuse_errormsg.c  reuse_errorstring.c  reuse_exec.c  reuse_geterrorstring.c  reuse_getsignalstring.c  reuse_getworkingdir.c  reuse_isabsolutepath.c  reuse_isfile.c  reuse_logger.c  reuse_nodename.c  reuse_normalize_path.c  reuse_rgetworkingdir.c
executor-lib/src/main/c/ru/ivmiit/judge/: config.h  ru_ivmiit_executor_SafeExecutor.c  runguard-config.h  runguard.c  runguard.h
executor-lib/src/main/java/ru/ivmiit/executor/: SafeExecutor.java
executor-lib/src/main/java/ru/ivmiit/executor/enums/: ExecutorPlatform.java
executor-lib/src/main/java/ru/ivmiit/executor/models/: ExecutorResult.java
executor-lib/src/main/java/ru/ivmiit/executor/models/executors/: CppCheckerExecutor.java  DomjudgeExecutor.java  Executor.java  JavaExecutor.java  JavaWindowsExecutor.java
executor-lib/src/main/java/ru/ivmiit/executor/utils/: CommandLineUtils.java  FileUtils.java  NativeLoadUtils.java
executor-web/: pom.xml
executor-web/src/main/resources/: application.properties  data.sql  executor-web.properties  import.sql  log4j.properties
executor-web/src/main/resources/css/: style.css
executor-web/src/main/resources/templates/: examples.ftl  (+3 more)
executor-web/src/test/java/: SecurityTest.java  Summ.java  TestUnzipString.java
judgehost-connector/: pom.xml
judging-service/: pom.xml
src/main/resources/: application.properties
src/main/resources/js/: jquery.autoresize.js
src/main/resources/templates/: confirm_success.ftl  head.ftl  header.ftl  login.ftl  polygon_import.ftl  resources.ftl  sign_up.ftl  success_registration.ftl
src/test/java/: ExecutorCmdTest.java  ExecutorTest.java  InfinityTest.java  OutOfMemoryTest.java  OutOfTimeTest.java  SecurityTest.java  SimpleTest.java  SumTest.java
(+209 files in other folders)
